--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.52.0",
+    "sweetalert2": "^11.26.17",
     "yup": "^1.6.1",
     "zod": "3.23.8"
   },
